--- a/static/style.css
+++ b/static/style.css
@@ -35,6 +35,11 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.second-row {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 /* Footer */
 html {
   position: relative;
@@ -73,7 +78,17 @@ body {
   background: lightgray;
 }
 
-#pie, #bar, #map {
+#map {
+  height: 500px;
+  margin-bottom: 30px;
+}
+
+#map, #bar {
+  margin-top: 10px;
+  border:1px solid black;
+}
+
+#pie {
   margin-top: 20px;
   border:1px solid black;
 }
@@ -100,55 +115,8 @@ select {
   outline: none;
 }
 
-.margin-top-50 {
+/* .margin-top-50 {
   margin-top: 50px;
-}
+} */
 
-/* media queries which will only be activated at specific screen sizes */
-@media (max-width: 800px) {
-  #table-area td {
-    font-size: 1em;
-  }
-}
-
-@media (max-width: 500px) {
-  #table-area thead {
-    display: none;
-  }
-
-  #table-area tr td:first-child {
-    font-size: 1.8em;
-    font-weight: bold;
-    background: #1b3146;
-  }
-
-  #table-area tr td:last-child {
-    margin-bottom: 20px;
-  }
-
-  #table-area tr td:last-child::after {
-    display: block;
-    width: 100%;
-    height: 1px;
-    margin-top: 20px;
-    content: " ";
-    background: aliceblue;
-  }
-
-  #table-area td {
-    font-size: 1.25em;
-  }
-
-  #table-area tbody td {
-    display: block;
-    text-align: center;
-  }
-
-  #table-area tbody td::before {
-    display: block;
-    font-size: 1.4em;
-    font-weight: bold;
-    text-align: center;
-    content: attr(data-th);
-  }
-}
+/* add media queries */
