--- a/static/style.css
+++ b/static/style.css
@@ -123,10 +123,10 @@ select {
 }
 
 /* Legend */
-.legend {
+/* .legend {
   line-height: 18px;
   color: #555;
-}
+} */
 .legend i {
   width: 18px;
   height: 18px;
