--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
 
 .transbox {
   background-color: #ffffff;
-  opacity: 0.8;
+  opacity: 0.85;
   align-items: center;
   border: 2px solid black;
 }
@@ -17,7 +17,9 @@
   color: red;
   font-size: 75px;
   font-weight: bold;
-  font-family: fantasy;
+  font-family: 'Open Sans', sans serif;
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
 .transbox h2{
@@ -25,14 +27,14 @@
   color: red;
   font-size: 50px;
   font-weight: bold;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Open Sans', sans serif;
 }
 
 .transbox p {
   text-align: center;
   color: red;
   font-size: 24px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Open Sans', sans serif;
 }
 
 .row4 {
@@ -139,6 +141,59 @@ div.info.legend {
   background-color: rgb(253, 243, 227);
   padding: 10px;
   color: black
+}
+
+.card-container
+{
+    font-family: 'Open Sans', sans serif;
+    font-size: 50px;
+    font-weight: bold;
+    width: 400px;
+    height: 250px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    background-color: white;
+    position: relative;
+    left: 32%;
+    border-radius: 10px;
+    perspective: 1400px;
+}
+
+.card
+{
+    position: relative;
+    height: 100%;
+    border-radius: 10px;
+    width: 100%;
+    transform-style: preserve-3d;
+}
+
+.front,
+.back
+{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    backface-visibility: hidden;
+}
+
+.front
+{
+    color: #fff;
+    background: rgba(5, 91, 190, 0.829);
+}
+
+.back
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotateY(180deg);
+    color: white;
+    background: rgb(241, 1, 73);
 }
 
 /* Media queries */
