--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,13 @@
 .jumbotron{
-  background-image: url('../images/us_flag.jpg');
-	background-size: cover;
+  background-image: url('https://standardflags.com/shop/wp-content/uploads/2013/01/Nylon-American-Flag-closeup-1.jpg');
+  background-size: cover;
   background-repeat: no-repeat;
   border: 4px solid black;
   }
 
 .transbox {
   background-color: #ffffff;
-  opacity: 0.85;
+  opacity: 0.95;
   align-items: center;
   border: 2px solid black;
 }
@@ -84,14 +84,14 @@ body {
   width: 100%;
 }
 
+#pie {
+  border:1px solid black;
+}
+
 #bar {
   margin: 10px;
   padding: 10px;
   height: 400px;
-  border:1px solid black;
-}
-
-#pie {
   border:1px solid black;
 }
 
@@ -100,6 +100,11 @@ body {
   padding: 10px;
   height: 400px;
   border:1px solid black;
+}
+
+.main-svg {
+  width: 490px !important;
+  height: 380px;
 }
 
 #interactive {
