--- a/templates/index.html
+++ b/templates/index.html
@@ -97,12 +97,12 @@
         
         <div class="row row5"> 
             <div class="col-md-6">
-                <h3 style="text-align:center">Votes for 3rd Parties (1976-2016)</h3>  
+                <h3 style="text-align:center">Votes for 3rd Party Candidates</h3>  
                 <div id="bar-other"></div>
             </div>           
             
             <div class="col-md-6">            
-                <h3 style="text-align:center">Total Votes (1976-2016)</h3>  
+                <h3 style="text-align:center">Total Voting Population Over Time</h3>  
                 <div id="bar"></div>
             </div>
         </div>
