--- a/templates/index.html
+++ b/templates/index.html
@@ -57,38 +57,110 @@
                 </div>
             </div>
 
-            <div class="row row3">  
-                <div class="col-md-2">             
+            <div class="row row3">
+                <div class="col-md-2">
                     <div class="dropdown">
                         <h5> Select State</h5>
                         <h5></h5>
                         <!-- Update function name, if needed -->
-                        <select id="selState" onchange="changePlots(this.value)"></select>
+                        <select id="selState" onchange="changePlots(this.value)">
+                            <option value="Alabama">Alabama</option>
+                            <option value="Alaska">Alaska</option>
+                            <option value="Arizona">Arizona</option>
+                            <option value="Arkansas">Arkansas</option>
+                            <option value="California">California</option>
+                            <option value="Colorado">Colorado</option>
+                            <option value="Connecticut">Connecticut</option>
+                            <option value="Delaware">Delaware</option>
+                            <option value="Florida">Florida</option>
+                            <option value="Georgia">Georgia</option>
+                            <option value="Hawaii">Hawaii</option>
+                            <option value="Idaho">Idaho</option>
+                            <option value="Illinois">Illinois</option>
+                            <option value="Indiana">Indiana</option>
+                            <option value="Iowa">Iowa</option>
+                            <option value="Kansas">Kansas</option>
+                            <option value="Kentucky">Kentucky</option>
+                            <option value="Louisiana">Louisiana</option>
+                            <option value="Maine">Maine</option>
+                            <option value="Maryland">Maryland</option>
+                            <option value="Massachusetts">Massachusetts</option>
+                            <option value="Michigan">Michigan</option>
+                            <option value="Minnesota">Minnesota</option>
+                            <option value="Mississippi">Mississippi</option>
+                            <option value="Missouri">Missouri</option>
+                            <option value="Montana">Montana</option>
+                            <option value="Nebraska">Nebraska</option>
+                            <option value="Nevada">Nevada</option>
+                            <option value="New Hampshire">New Hampshire</option>
+                            <option value="New Jersey">New Jersey</option>
+                            <option value="New Mexico">New Mexico</option>
+                            <option value="New York">New York</option>
+                            <option value="North Carolina">North Carolina</option>
+                            <option value="North Dakota">North Dakota</option>
+                            <option value="Ohio">Ohio</option>
+                            <option value="Oklahoma">Oklahoma</option>
+                            <option value="Oregon">Oregon</option>
+                            <option value="Pennsylvania">Pennsylvania</option>
+                            <option value="Rhode Island">Rhode Island</option>
+                            <option value="South Carolina">South Carolina</option>
+                            <option value="South Dakota">South Dakota</option>
+                            <option value="Tennessee">Tennessee</option>
+                            <option value="Texas">Texas</option>
+                            <option value="Utah">Utah</option>
+                            <option value="Vermont">Vermont</option>
+                            <option value="Virginia">Virginia</option>
+                            <option value="Washington">Washington</option>
+                            <option value="West Virginia">West Virginia</option>
+                            <option value="Wisconsin">Wisconsin</option>
+                            <option value="Wyoming">Wyoming</option>
+                          </select>
                     </div>
-                </div>  
-                
-                <div class="col-md-2"> 
+                </div>
+                <div class="col-md-2">
                     <div class="dropdown">
                         <h5> Select Year</h5>
                         <h5></h5>
                         <!-- Update function name, if needed -->
-                        <select id="selYear" onchange="changePlots(this.value)"></select>
+                        <select id="selYear" onchange="changePlots(this.value)">
+                            <option value="1976">1976</option>
+                            <option value="1980">1980</option>
+                            <option value="1984">1984</option>
+                            <option value="1988">1988</option>
+                            <option value="1992">1992</option>
+                            <option value="1996">1996</option>
+                            <option value="2000">2000</option>
+                            <option value="2004">2004</option>
+                            <option value="2008">2008</option>
+                            <option value="2012">2012</option>
+                            <option value="2016">2016</option>
+                        </select>
                     </div>
                 </div>
             </div>
-
-            <div class="row row4">  
+            <div class="row row4">
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <p class="panel-title">Data Table</p>
                             <div id="table" class="panel-body">
-                                <table></table>
+                                <table><thead>
+                                    <tr>
+                                      <th class="table-head">Year</th>
+                                      <th class="table-head">State</th>
+                                      <th class="table-head">Winner</th>
+                                      <th class="table-head">Winner Party</th>
+                                      <th class="table-head">Runner Up</th>
+                                      <th class="table-head">Runner Up Party</th>
+                                      <th class="table-head">Electoral College Votes</th>
+                                    </tr>
+                                    <tbody></tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
                 </div>
-
+            
                 <div class="col-md-6">
                     <div id="pie">Pie Chart</div>  
                 </div>
@@ -102,7 +174,7 @@
             </div>           
             
             <div class="col-md-6">            
-                <h3 style="text-align:center">Total Voting Population Over Time</h3>  
+                <h3 style="text-align:center">Voter Turnout Over Time</h3>  
                 <div id="bar"></div>
             </div>
         </div>
@@ -127,7 +199,7 @@
   <script type="text/javascript" src="https://leafletjs.com/examples/choropleth/us-states.js"></script>
   <script src="../static/anime.min.js"></script>
   <script type="text/javascript" src="static/config.js"></script>
-  <script src="../static/logic.js"></script>
+  <script src="../static/logic3.js"></script>
   
 
 </body>
