--- a/static/style.css
+++ b/static/style.css
@@ -84,8 +84,8 @@ body {
   width: 100%;
 }
 
-#pie {
-  border:1px solid black;
+#table, .dropdown {
+  padding: 5px;
 }
 
 #bar {
@@ -118,6 +118,7 @@ body {
 
 .panel {
   border: 1px solid black;
+  height: 400;
 }
 
 /* Dropdown */
