--- a/templates/index.html
+++ b/templates/index.html
@@ -137,33 +137,12 @@
             </div>
             <div class="row row4">
                 <div class="col-md-6">
-                    <h3>Election Data</h3>
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <p class="panel-title"></p>
-                            <div id="table" class="panel-body">
-                                <table><thead>
-                                    <tr>
-                                      <th class="table-head">Year</th>
-                                      <th class="table-head">State</th>
-                                      <th class="table-head">Winner</th>
-                                      <th class="table-head">Winner Party</th>
-                                      <th class="table-head">Runner Up</th>
-                                      <th class="table-head">Runner Up Party</th>
-                                      <th class="table-head">Electoral College Votes</th>
-                                    </tr>
-                                    <tbody></tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
+                    <div id="pie2">Electoral College Votes</div>
                 </div>
-            
                 <div class="col-md-6">
-                    <h3>Voter Results By Candidate</h3>
-                    <div id="pie"></div>  
+                    <div id="pie">Popular Vote</div>
                 </div>
-            </div>     
+            </div>
         </div>
         
         <div class="row row5"> 
